refactor dockerfiles, try fix maven build err